--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 			</div>
 			<p id="barra-vertical">&vert;</p>
 			<img id="img-cabecera" src="assets/img/coders.png">
+			<div id="followers">
+				<p>Followers</p>
+				<span class="icon-chevron-thin-down"></span>
+			</div>
 			<div id="iconos-redes-sociales">
 				<span class="icon-twitter"></span>
 				<span class="icon-facebook"></span>
 			</div>
 		</div>
 		<div id="header-right">
-			<p class="edit">Edit</p>
-			<span class="icon-Search"></span>
-			<div id="circulo-verde"></div>
-			<div id="imagen-perfil"></div>
-			<div id="logo-laboratoria">
-				<img src="">
-			</div>			
+			<div id="iconos-right">
+				<span class="icon-Search"></span>
+				<span class="icon-notification"></span>
+			</div>
+			<img id="me" src="assets/img/me.jpg">	
 		</div>
 	</header>
 	<section id="general-body">
@@ -45,7 +47,8 @@
 		</section>
 		<section id="body-page">
 			<h1>Hazlo con estilo : Tipografías, iconos y sprite</h1>
-			<p id="body">Te imaginas el mundo sin tipos de letra, tamaños, colores, o sin iconos , nada, nada sería iguaaaaaal!!!! Pero gracias a muchos desarrolladores y diseñadores, hoy contamos con una inimaginable gama de fuentes para nuestro desarrollos web, pero la pregunta que nos hacemos es, ¿existen reglas, hay una mejor forma de hacerlo, no sé que tipografía usar? Tengo muchas preguntas y pocas respuestas!!</p>
+			<p class="body">Te imaginas el mundo sin tipos de letra, tamaños, colores, o sin iconos , nada, nada sería iguaaaaaal!!!! Pero gracias a muchos desarrolladores y diseñadores, hoy contamos con una inimaginable gama de fuentes para nuestro desarrollos web, pero la pregunta que nos hacemos es, ¿existen reglas, hay una mejor forma de hacerlo, no sé que tipografía usar? Tengo muchas preguntas y pocas respuestas!!</p>
+			<p class="body">Vamos paso a paso…</p>
 		</section>
 	</section>
 	<footer>
