--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div id="icon-medium">
 				<span class="icon-medium"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span></span>
 			</div>
-			<p id="barra-vertical">&vert;</p>
+			<p class="barra-vertical">&vert;</p>
 			<img id="img-cabecera" src="assets/img/coders.png">
 			<div id="followers">
 				<p>Followers</p>
@@ -51,10 +51,23 @@
 			<p class="body">Vamos paso a paso…</p>
 		</section>
 	</section>
-	<footer>
+	<footer id="footer">
 		<hr>
-		<div>
-			<span></span>
+		<section id="bottom-body">
+			<div id="iconos-redes-left">
+			<span class="heart-outlined"></span>
+			<span class="icon-Speech-Bubble"></span>
+		</div>
+		<div id="iconos-redes-right">
+			<span class="icon-twitter"></span>
+			<span class="icon-facebook"></span>
+		</div>
+		<p class="barra-vertical">&vert;</p>
+		</section>
+		<div id="leyend">
+			<p>New story</p>
+			<p>Amor infinito a Sublime Text</p>
+			<span class="heart-outlined"></span>
 		</div>
 	</footer>
 	<script type="text/javascript" src="assets/js/app.js"></script>
